--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,7 +7,7 @@
     aws_key_id: 
     ${{ secrets.AWS_ACCESS_KEY_ID }}
     aws_secret_access_key: 
-    ${{ secrets.AWS_ACCESS_KEY_ID }}
+    ${{ secrets.AWS_SECRET_ACCESS_KEY }}
     aws_bucket: 
     'miketineo.com'
     source_dir: 'build'
