--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,14 +1,15 @@
-- name: Upload S3
-  # You may pin to the exact commit or the version.
-  # uses: shallwefootball/upload-s3-action@4350529f410221787ccf424e50133cbc1b52704e
-  uses: shallwefootball/upload-s3-action@v1.3.3
-  with:
-    # aws key id
-    aws_key_id: ${{ secrets.AWS_ACCESS_KEY_ID }}
-    aws_secret_access_key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-    aws_bucket: 'miketineo.com'
-    source_dir: 'build'
-    # destination directory for upload
-    # destination_dir: './' # optional, default is /
-    # endpoint URI to send requests
-    # endpoint: # optional
+name: Upload to S3
+
+on: [pull_request]
+
+jobs:
+  upload:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@master
+      - uses: ochanje210/s3-upload-action@master
+        with:
+          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY}}
+          AWS_S3_BUCKET: 'miketineo.com'
+          SOURCE_DIR: 'build'
