--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,19 +2,19 @@ name: Upload to S3
 
 on:
   pull_request:
-    types:
-      - closed
-      
+    branches:
+      - main
+    types: [closed]
+
 jobs:
   upload:
-    if_merged:
-      if: github.event.pull_request.merged == true
-      runs-on: ubuntu-latest
-      steps:
-        - uses: actions/checkout@master
-        - uses: ochanje210/s3-upload-action@master
-          with:
-            AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
-            AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY}}
-            AWS_S3_BUCKET: 'miketineo.com'
-            SOURCE_DIR: 'build'
+    if: github.event.pull_request.merged == true
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@master
+      - uses: ochanje210/s3-upload-action@master
+        with:
+          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          AWS_S3_BUCKET: "miketineo.com"
+          SOURCE_DIR: "build"
