--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -9,10 +9,13 @@ jobs:
   upload:
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@master
-      - uses: ochanje210/s3-upload-action@master
+      - uses: actions/checkout@v2
+      - name: Sync S3
+        uses: jakejarvis/s3-sync-action@v0.5.1
         with:
+          args: --acl public-read --follow-symlinks --delete
+        env:
+          AWS_S3_BUCKET: "miketineo.com"
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
-          AWS_S3_BUCKET: "miketineo.com"
-          SOURCE_DIR: "build"
+          SOURCE_DIR: "."
